--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,2 @@
-@import "~bootstrap/scss/functions";
 @import "./variables";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "../button/styles/button";
+@import "../editor/styles/editor";
