--- a/demo/src/app/components/+editor/editor.component.html
+++ b/demo/src/app/components/+editor/editor.component.html
@@ -1,3 +1,5 @@
 <div>
-    <button ngxEditor="primary" thySize="sm">确定</button>
+    <ngx-editor [(ngModel)]="value" [config]="config"></ngx-editor>
+    {{value}}
+    <!-- <wt-editor ng-model="vm.temp.description" ctrl-enter="vm.updateDescription()" config="{type:'simple',className:'wt-editor-desc',autofocus:false,autoHeight:true}"></wt-editor> -->
 </div>
