--- a/src/editor/styles/editor.scss
+++ b/src/editor/styles/editor.scss
@@ -1,189 +1,252 @@
-// stylelint-disable selector-no-qualifying-type
-//
-// Base styles
-//
-.btn {
-    // 设置 icon 字体大小
-    i, .wtf {
-        font-size: $font-size-base;
-        line-height: 1rem;
-        // @include button-icon-margin(0.375rem);
+/*
+*name   : ngx-editor
+*layout : use css3 flex layout
+*brower : ie10+ chrome firefox safari opera
+*/
+
+
+/***common color****/
+
+$layout-boder:#E3E6EC;
+$layout-bg:#fff;
+$layout-shadow:rgba(0, 0, 0, 0.15);
+$layout-toolbar-bg:#fff;
+$layout-toolbar-border:#eee;
+$layout-toolbar-icon-bg:#ddd;
+$layout-toolbar-icon-color:#333;
+$layout-toolbar-icon-border:#ccc;
+$layout-toolbar-dividor-bg:#cfcfcf;
+$layout-toolbar-active-bg:#eeeeee;
+$layout-code-content:#fff;
+$layout-code-content-shadow:#eee;
+$layout-code-line:#fcfcfc;
+$layout-code-line-color:#ddd;
+$layout-table-menu-bg:#f3f3f3;
+$layout-table-menu-hover:#cfcfcf;
+$text-placeholder:#cacaca;
+
+/***layout***/
+
+.wt-editor-full-screen {
+    position: absolute;
+    z-index: 100000;
+}
+
+.ngx-editor {
+    width: 100%;
+    height: 100%;
+    border: 1px $layout-boder solid;
+    box-shadow: 0 3px 20px $layout-shadow;
+    background: $layout-bg;
+    margin: auto;
+    display: -webkit-box;
+    display: flex;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    .ngx-editor-toobar {
+        //padding: 5px 10px;
+        background: $layout-toolbar-bg;
+        border-bottom: 1px $layout-toolbar-border solid;
+        position: relative;
+        .noselect {
+            /* toolbar上面的按钮无论怎样点击都不应该选中 */
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+        .wtEditorToolBarUl {
+            display: block;
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            .wtEditorToolBarli {
+                display: inline-block;
+                padding: 0;
+                margin: 0;
+                &.active {
+                    background: $layout-toolbar-active-bg;
+                }
+                .toolbar-menu {
+                    position: absolute;
+                    top: 38px;
+                    left: -1px;
+                    z-index: 1;
+                    background: #fff;
+                    width: 162px;
+                    border: 1px #e8e8e8 solid;
+                    box-shadow: 1px 2px 4px $layout-shadow;
+                    ul {
+                        display: block;
+                        padding: 0;
+                        margin: 0;
+                        list-style: none;
+                        li {
+                            padding: 0;
+                            margin: 0;
+                            display: block;
+                            padding: 10px;
+                            vertical-align: middle;
+                            cursor: pointer;
+                            &:hover {
+                                background: #f6f6f6;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .toolbar-icon,
+        .file-icon,
+        .styling-icon,
+        .heading-icon,
+        .list-icon,
+        .link-icon,
+        .image-icon,
+        .code-icon,
+        .table-icon,
+        .icon-icon,
+        .math-icon,
+        .mermaid-icon,
+        .con-icon {
+            padding: 10px;
+            border: 1px solid transparent;
+            color: $layout-toolbar-icon-color;
+            opacity: 0.5;
+            font-size: 16px;
+            &:hover {
+                cursor: pointer;
+                opacity: 0.8;
+            }
+        }
+        .divider {
+            font-style: normal;
+            background: $layout-toolbar-dividor-bg;
+            margin: 0 5px;
+            display: inline-block;
+            width: 1px;
+            height: 18px;
+            line-height: 20px;
+            vertical-align: top;
+        }
     }
-    display: inline-block;
-    font-weight: $btn-font-weight;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    border: $btn-border-width solid transparent;
-    @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-line-height, $btn-border-radius);
-    @include transition($btn-transition); // Share hover and focus styles
-    @include hover-focus {
-        text-decoration: none;
+    .ngx-editor-container {
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+        -webkit-flex: 1;
+        display: -webkit-box;
+        display: flex;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -webkit-flex-direction: row;
+        &.height-auto {
+            flex: inherit!important;
+        }
     }
-    &:focus,
-    &.focus {
-        outline: 0; // box-shadow: $btn-focus-box-shadow;
-    } // Disabled comes first so active can properly restyle
-    &.disabled,
-    &:disabled {
-        color: $btn-disabled-color;
-        background-color: $btn-disabled-bg-color;
-        border-color: $btn-disabled-border-color; // opacity: $btn-disabled-opacity;
-        @include box-shadow(none);
-    } // Opinionated: add "hand" cursor to non-disabled .btn elements
-    &:not(:disabled):not(.disabled) {
-        cursor: pointer;
+    .ngx-editor-container-code {
+        position: relative;
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+        -webkit-flex: 1;
+        overflow-x: hidden;
+        overflow-y: auto;
+        .ngx-editor-textarea {
+            border: 0;
+            display: block;
+            resize: none;
+            font-size: 18px;
+            line-height: 18px;
+            padding: 30px 15px;
+            box-sizing: border-box;
+            width: 100%;
+            &::-webkit-input-placeholder {
+                color: $text-placeholder;
+            }
+            &:-moz-placeholder {
+                color: $text-placeholder;
+            }
+            &::-moz-placeholder {
+                color: $text-placeholder;
+            }
+            &::-ms-input-placeholder {
+                color: $text-placeholder;
+            }
+            &:focus {
+                border: 0;
+                outline: none;
+            }
+        }
+        .ngx-editor-panel {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            .ace_content {
+                background: $layout-code-content;
+                box-shadow: inset 0 0 2px $layout-code-content-shadow;
+            }
+            .ace_gutter-layer {
+                background: $layout-code-line;
+                .ace_gutter-cell {
+                    color: $layout-code-line-color;
+                }
+            }
+        }
     }
-    &:not(:disabled):not(.disabled):active,
-    &:not(:disabled):not(.disabled).active {
-        background-image: none; // @include box-shadow($btn-active-box-shadow);
-        // &:focus {
-        //     @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
-        // }
+    .ngx-editor-container-preview {
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+        -webkit-flex: 1;
+        overflow: auto;
+        border-left: 1px $layout-toolbar-border solid;
+        padding: 30px 15px;
+        box-sizing: border-box;
     }
-} 
-
-.btn.btn-has-icon {
-    i, .wtf {
-        @include button-icon-margin(0.375rem);
-    } 
-}
-
-// Future-proof disabling of clicks on `<a>` elements
-a.btn.disabled,
-fieldset:disabled a.btn {
-    pointer-events: none;
-}
-
-
-//
-// Alternate buttons
-//
-
-@each $color, $value in $theme-colors {
-    .btn-#{$color} {
-      @include button-variant($white, $white, $value, $value, $value, $value, $value, $value);
-      @include button-hover-box-shadow($value);
-    }
-}
-  
-@each $color, $value in $theme-colors {
-    .btn-outline-#{$color} {
-      @include button-outline-variant($value, $value, $white, $value, null, $value, null);
-    }
-}
-
-.btn-outline-default {
-    @include button-outline-variant($gray-600, $gray-300, $primary, null, $primary, null, $primary);
-}
-
-// .btn-primary {
-//     @include button-variant($white, $white, $primary, $primary, $primary, $primary, $primary, $primary);
-//     @include button-hover-box-shadow($primary);
-// }
-
-// .btn-warning {
-//     @include button-variant($white, $white, $warning, $warning, $warning, $warning, $warning, $warning);
-// }
-
-// .btn-success {
-//     @include button-variant($white, $white, $success, $success, $success, $success, $success, $success);
-// }
-
-// .btn-danger {
-//     @include button-variant($white, $white, $danger, $danger, $danger, $danger, $danger, $danger);
-//     @include button-hover-box-shadow($danger);
-// }
-
-// // $color, $border-color, $hover-color, $hover-background, 
-// // $hover-border, $active-background, $active-border
-// .btn-outline-primary {
-//     @include btn-normal-radius();
-//     @include button-outline-variant($primary, $primary, $white, $primary, null, $primary, null);
-// }
-
-// .btn-outline-default {
-//     @include button-outline-variant($gray-600, $gray-300, $primary, null, $primary, null, $primary);
-// }
-
-// .btn-outline-info {
-//     border-radius: $border-radius;
-//     @include button-outline-variant($primary, $primary, $white, $primary, null, $primary, null);
-// }
-
-// 圆角方正，回归正常的圆角
-.btn-square {
-    @include btn-square-radius();
-}
-
-//
-// Button Sizes
-//
-.btn-lg {
-    @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $font-size-lg, $btn-line-height-lg, $btn-border-radius-lg);
-}
-
-.btn-md {
-    @include button-size($btn-padding-y-md, $btn-padding-x-md, $font-size-base, $btn-line-height, $btn-border-radius);
-}
-
-.btn-sm {
-    @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $font-size-sm, $btn-line-height-sm, $btn-border-radius-sm);
-}
-
-//
-// Link buttons
-//
-// Make a button look and behave like a link
-.btn-link {
-    font-weight: $font-weight-normal;
-    color: $link-color;
-    background-color: transparent;
-    @include hover {
-        color: $link-hover-color;
-        text-decoration: $link-hover-decoration;
-        background-color: transparent;
-        border-color: transparent;
-    }
-    &:focus,
-    &.focus {
-        text-decoration: $link-hover-decoration;
-        border-color: transparent;
-        box-shadow: none;
-    }
-    &:disabled,
-    &.disabled {
-        color: $btn-link-disabled-color;
-    } // No need for an active state here
-}
-
-.btn-link.btn-link-info {
-    @include btn-link-variant($info, $primary, none);
-}
-
-.btn-link.btn-link-default {
-    @include btn-link-variant($btn-link-color-default, $primary, none);
-}
-
-//
-// Block button
-//
-.btn-block {
-    display: block;
-    width: 100%; // Vertically space out multiple block buttons
-    +.btn-block {
-        margin-top: $btn-block-spacing-y;
+    .table-menu {
+        position: absolute;
+        z-index: 100;
+        top: 38px;
+        background: $layout-bg;
+        border: 1px $layout-boder solid;
+        ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            display: block;
+            padding-bottom: 2px;
+            li {
+                padding: 0;
+                margin: 0;
+                display: block;
+                margin-top: 2px;
+                line-height: 15px;
+                height: 15px;
+                padding-right: 2px;
+                i {
+                    width: 15px;
+                    height: 15px;
+                    background: $layout-table-menu-bg;
+                    display: inline-block;
+                    //margin-top: 5px;
+                    margin-left: 2px;
+                    &.active {
+                        background: $layout-table-menu-hover;
+                    }
+                }
+            }
+        }
     }
 }
-
-// Specificity overrides
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
-    &.btn-block {
-        width: 100%;
-    }
-}
-
-@import './button-icon';
